--- a/Phaser_Template/index.html
+++ b/Phaser_Template/index.html
@@ -6,6 +6,7 @@
     <!--Load java script -->
     <script src="phaser/phaser.min.js"></script>
     <script src="state1.js"></script>
+    <script src="state2.js"></script>
   </head>
   <body>
     <!--load Game  -->
