--- a/Phaser_Template/index.html
+++ b/Phaser_Template/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HTML HEADER</title>
+    <title>GAME TITLE</title>
     <!--Load java script -->
     <script src="phaser/phaser.min.js"></script>
     <script src="state1.js"></script>
